--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           </div>
 
         </div>
-        <a href="https://padlet.com/chong_zhuang_hong/qefe01or76f7t80r">
+        <a href="https://www.streetdirectory.com/">
           <button>Login</button>
         </a>
       </div>
